# bes2_ue2_car-client-server

./: .gitignore  CMakeLists.txt  Makefile
client/: Makefile  client.c  client.h  main.c  server.c  server.h
display/: Makefile  main.c
server/: Makefile  client.c  client.h  main.c  server.c  server.h
shared/: Makefile  client_msg_types.h  messages.c  messages.h
